package com.fraedrasil.repository;

import com.fraedrasil.entity.Aspect;
import org.springframework.data.jpa.repository.JpaRepository;

public interface AspectRepository extends JpaRepository<Aspect, Long> {
}
